--- a/css/index.css
+++ b/css/index.css
@@ -28,6 +28,28 @@ body {
 .mainPageArea {
     width: 98%;
     margin: 20px auto;
+    text-align: center;
+}
+
+.pageHeader {
+    text-align: center;
+}
+
+.recipieTable {
+    text-align: left;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.recipieTableArea {
+    padding-top: 20px;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.recipeExtras {
+    width 98%;
+    text-align: center;
 }
 
 .cookingQuote {
@@ -40,6 +62,10 @@ body {
     font-size: 70px;
 }
 
+.headerImg {
+    text-align: center;
+}
+
 .cookingImg {
     width: 50%;
     float: right;
@@ -47,8 +73,21 @@ body {
     text-align: center;
 }
 
+.meatCatImg {
+    width: 450px;
+    height: 450px;
+    display: inline-block;
+    margin: 20px;
+}
+
+.meatCatImg img {
+    max-height: 100%;
+    max-width: 100%;
+}
+
 footer {
-    margin-top: 50%;
-    width: 100%;
+    margin-top: 50px;
+    width: 98%;
     text-align: center;
+    margin: 0 auto;
 }
