--- a/css/index.css
+++ b/css/index.css
@@ -26,10 +26,15 @@ body {
     text-decoration: underline;
 }
 
+#chefHat {
+    max-height: 200px;
+}
+
 .mainPageArea {
     width: 98%;
     margin: 20px auto;
     text-align: center;
+    min-height: 600px;
 }
 
 .pageHeader {
